next:
    - build switched to gradle
    - java 8

0.3.1:
	- avoid drawing too long progress bars with percentages above 100

0.3:
	- system property net.jcprogress.disable to disable progress indicator at all
	- improved time estimation
	- stalled message
	
0.2:
	- use of commons logging instead log4j