@@ -1,12 +1,9 @@
 /*
- * TimeDiffTest.java
- *
- * Copyright 2008 Patrick Mairif.
+ * Copyright 2009-2019 Patrick Mairif.
  * The program is distributed under the terms of the Apache License (ALv2).
- * 
- * tabstop=4, charset=UTF-8
+ *
  */
-package net.sf.jcprogress;
+package com.github.pmairif.jcprogress;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
