@@ -1,6 +1,7 @@
 next:
     - build switched to gradle
     - java 8
+    - changed java package to com.github.pmairif.jcprogress
 
 0.3.1:
 	- avoid drawing too long progress bars with percentages above 100
